--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-4">
     <div class="row justify-content-center">
-        <div class="col-md-5 border rounded mx-auto mt-4">
+        <div class="col-md-5 border rounded mx-auto mt-4 box-background">
             <div class="mx-3 my-4">
-                <p class="fs-2 fw-bold shiny-text text-center mb-4">Frontend</p>
+                <p class="fs-2 fw-bold shiny-text text-center mb-4 shine-effect">Frontend</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
                     <div>
                         <div class="text-center">
@@ -116,9 +116,9 @@
             </div>
 
         </div>
-        <div class="col-md-5 border rounded mx-auto mt-4">
+        <div class="col-md-5 border rounded mx-auto mt-4 box-background">
             <div class="mx-3 my-4">
-                <p class="fs-2 fw-bold shiny-text text-center mb-4">Backend</p>
+                <p class="fs-2 fw-bold shiny-text text-center mb-4 shine-effect">Backend</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
                     <div>
                         <div class="text-center">
@@ -222,9 +222,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-5 border rounded mx-auto mt-4">
+        <div class="col-md-5 border rounded mx-auto mt-4 box-background">
             <div class="mx-3 my-4">
-                <p class="fs-2 fw-bold shiny-text text-center mb-4">Aprendiendo</p>
+                <p class="fs-2 fw-bold shiny-text text-center mb-4 shine-effect">Aprendiendo</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
                     <div>
                         <div class="text-center">
@@ -255,9 +255,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-5 border rounded mx-auto mt-4">
+        <div class="col-md-5 border rounded mx-auto mt-4 box-background">
             <div class="mx-3 my-4">
-                <p class="fs-2 fw-bold shiny-text text-center mb-4">Herramientas</p>
+                <p class="fs-2 fw-bold shiny-text text-center mb-4 shine-effect">Herramientas</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
                     <div>
                         <div class="text-center">
