--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark transparent-background fixed-top py-2" aria-label="navbar">
     <div class="container">
         <a class="navbar-brand" href="/">
-            <span class="fs-4 shiny-text brand-text">RICARDODEV</span>
+            <span class="fs-4 shiny-title brand-text">RICARDODEV</span>
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10"
