--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -3,14 +3,14 @@
     <section class="custom-padding-top mb-5 mx-3" id="sobre-mi">
         <div class="row">
             <div class="col-md-8">
-                <h1 class="fw-bold">Hola, <span class="shiny-text">soy Ricardo</span>
+                <h1 class="fw-bold">Hola, <span class="shiny-title">soy Ricardo</span>
                 </h1>
-                <p class="fs-5 shine-effect">Desarrollador Full Stack</p>
+                <p class="fs-5 shiny-text shine-effect">Desarrollador Full Stack</p>
 
                 <p class="fs-5 mt-5 mb-4">¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la tecnología, los deportes y
                     los
                     desafíos.
-                    Con una formación en Desarrollo de aplicaciones web, actualmente me encuentro en un emocionante
+                    Con una formación en <span class="shiny-text">desarrollo de aplicaciones web</span>, actualmente me encuentro en un emocionante
                     viaje de
                     aprendizaje para especializarme como Full Stack Developer y explorar nuevas oportunidades en la
                     industria tecnológica.</p>
@@ -27,8 +27,8 @@
         <div class="mx-3">
 
             <p class="fs-2 fw-bold">Tecnologías</p>
-            <p class="my-0 fs-5">En mi viaje por el <span class="fw-bold shiny-text">mundo del desarrollo web</span>, he
-                cultivado experiencia y habilidades en una variedad de tecnologías. <span class="fw-bold shiny-text">Mi
+            <p class="my-0 fs-5">En mi viaje por el <span class="shiny-text">mundo del desarrollo web</span>, he
+                cultivado experiencia y habilidades en una variedad de tecnologías. <span class="shiny-text">Mi
                     stack tecnológico incluye:</span></p>
         </div>
         <app-technologies></app-technologies>
