experience section implemented

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,9 @@
                     <a class="nav-link active" href="#tecnologias">Tecnologías</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link active" href="#experiencia">Experiencia</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" href="#">Proyectos</a>
                 </li>
                 <li class="nav-item">
