--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,8 +21,13 @@ $success: #14a800;
 
 body {
   padding-top: 65px;
-  background: linear-gradient(180deg, var(--brand-secondary) 0%, rgb(0, 2, 10) 30%);
-  
+  background: var(--brand-secondary);
+  background: linear-gradient(
+    180deg,
+    var(--brand-secondary) 0%,
+    rgb(0, 2, 10) 30%
+  );
+
   color: #ffffff;
 }
 
@@ -95,6 +100,15 @@ body {
 }
 
 .box-background {
-  background: rgb(0,7,32);
+  background: rgb(0, 7, 32);
   background: linear-gradient(90deg, rgb(1, 10, 43) 0%, rgb(0, 0, 0) 100%);
+}
+
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+a:hover {
+  text-decoration: underline;
 }
