--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -5,12 +5,13 @@
             <div class="col-md-8">
                 <h1 class="fw-bold">Hola, <span class="shiny-title">soy Ricardo</span>
                 </h1>
-                <p class="fs-5 shiny-text shine-effect">Desarrollador Full Stack</p>
+                <h5 class="shiny-text shine-effect">Desarrollador Full Stack</h5>
 
                 <p class="fs-5 mt-5 mb-4">¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la tecnología, los deportes y
                     los
                     desafíos.
-                    Con una formación en <span class="shiny-text">desarrollo de aplicaciones web</span>, actualmente me encuentro en un emocionante
+                    Con una formación en <span class="shiny-text">desarrollo de aplicaciones web</span>, actualmente me
+                    encuentro en un emocionante
                     viaje de
                     aprendizaje para especializarme como Full Stack Developer y explorar nuevas oportunidades en la
                     industria tecnológica.</p>
@@ -25,8 +26,7 @@
 
     <section class="custom-padding-top my-5" id="tecnologias">
         <div class="mx-3">
-
-            <p class="fs-2 fw-bold">Tecnologías</p>
+            <h2 class="fw-bold mb-3">Tecnologías</h2>
             <p class="my-0 fs-5">En mi viaje por el <span class="shiny-text">mundo del desarrollo web</span>, he
                 cultivado experiencia y habilidades en una variedad de tecnologías. <span class="shiny-text">Mi
                     stack tecnológico incluye:</span></p>
@@ -36,10 +36,29 @@
 
     <hr>
 
+    <section class="custom-padding-top my-5" id="experiencia">
+        <div class="mx-3">
+            <h2 class="fw-bold mb-3">Experiencia</h2>
+            <!-- Línea de tiempo -->
+            <div class="timeline">
+                <div *ngFor="let experiencia of experienciaList" class="timeline-item mb-4">
+                    <p class="my-0 fs-5"><span class="shiny-text">{{ experiencia.puesto }}</span> - <a
+                            [href]="experiencia.enlace" target="_blank">{{ experiencia.empresa }}</a></p>
+                    <small>{{ experiencia.fecha }}</small>
+                    <p class="mt-2">{{ experiencia.descripcion }}</p>
+                </div>
+            </div>
+            <!-- Fin de la línea de tiempo -->
+
+        </div>
+    </section>
+
+    <hr>
+
     <section class="custom-padding-top mt-5" id="contacto">
         <div class="mx-3">
 
-            <p class="fs-2 fw-bold text-center">Contacto</p>
+            <h2 class="fw-bold mb-3 text-center">Contacto</h2>
             <p class="my-0 fs-5 text-center">Para cualquier oferta o consulta puedes ponerte en contacto conmigo através
                 de este formulario y me pondré en contacto contigo lo antes posible.</p>
         </div>
