lenguages section implemented

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -55,6 +55,24 @@
 
     <hr>
 
+    <section class="custom-padding-top my-5" id="experiencia">
+        <div class="mx-3">
+            <h2 class="fw-bold mb-3">Idiomas</h2>
+
+            <div class="mb-4">
+                <p class="my-0 fs-5"><span class="shiny-text">Español</span></p>
+                <p class="mt-2">Hablante nativo</p>
+            </div>
+            <div class="mb-4">
+                <p class="my-0 fs-5"><span class="shiny-text">Ingles</span></p>
+                <p class="mt-2">Intermedio-avanzado</p>
+            </div>
+
+        </div>
+    </section>
+
+    <hr>
+
     <section class="custom-padding-top mt-5" id="contacto">
         <div class="mx-3">
 
