--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -27,7 +27,7 @@
     <section class="custom-padding-top my-5" id="tecnologias">
         <div class="mx-3">
             <h2 class="fw-bold mb-3">Tecnologías</h2>
-            <p class="my-0 fs-5">En mi viaje por el <span class="shiny-text">mundo del desarrollo web</span>, he
+            <p class="fs-5 my-0">En mi viaje por el <span class="shiny-text">mundo del desarrollo web</span>, he
                 cultivado experiencia y habilidades en una variedad de tecnologías. <span class="shiny-text">Mi
                     stack tecnológico incluye:</span></p>
         </div>
@@ -42,7 +42,7 @@
             <!-- Línea de tiempo -->
             <div class="timeline">
                 <div *ngFor="let experiencia of experienciaList" class="timeline-item mb-4">
-                    <p class="my-0 fs-5"><span class="shiny-text">{{ experiencia.puesto }}</span> - <a
+                    <p class="fs-5 my-0"><span class="shiny-text">{{ experiencia.puesto }}</span> - <a
                             [href]="experiencia.enlace" target="_blank">{{ experiencia.empresa }}</a></p>
                     <small>{{ experiencia.fecha }}</small>
                     <p class="mt-2">{{ experiencia.descripcion }}</p>
@@ -60,11 +60,11 @@
             <h2 class="fw-bold mb-3">Idiomas</h2>
 
             <div class="mb-4">
-                <p class="my-0 fs-5"><span class="shiny-text">Español</span></p>
+                <p class="fs-5 my-0"><span class="shiny-text">Español</span></p>
                 <p class="mt-2">Hablante nativo</p>
             </div>
             <div class="mb-4">
-                <p class="my-0 fs-5"><span class="shiny-text">Ingles</span></p>
+                <p class="fs-5 my-0"><span class="shiny-text">Ingles</span></p>
                 <p class="mt-2">Intermedio-avanzado</p>
             </div>
 
@@ -77,7 +77,7 @@
         <div class="mx-3">
 
             <h2 class="fw-bold mb-3 text-center">Contacto</h2>
-            <p class="my-0 fs-5 text-center">Para cualquier oferta o consulta puedes ponerte en contacto conmigo através
+            <p class="fs-5 my-0 text-center">Para cualquier oferta o consulta puedes ponerte en contacto conmigo através
                 de este formulario y me pondré en contacto contigo lo antes posible.</p>
         </div>
 
