--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 :root {
   --brand-main: #3ec2ff;
-  --brand-secondary: #040a27;
+  --brand-secondary: #02061a;
   --brand-tertiary: #8bf2ff;
 }
 
 $primary: #3ec2ff;
-$secondary: #040a27;
+$secondary: #02061a;
 $success: #14a800;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
@@ -22,12 +22,6 @@ $success: #14a800;
 body {
   padding-top: 65px;
   background: var(--brand-secondary);
-  background: linear-gradient(
-    180deg,
-    var(--brand-secondary) 0%,
-    rgb(0, 2, 10) 30%
-  );
-
   color: #ffffff;
 }
 
