projects section implemented

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -17,7 +17,7 @@
                     industria tecnológica.</p>
             </div>
             <div class="col-md-4">
-                <img src="assets/images/retrato.webp" class="img-thumbnail mx-auto d-block" alt="retrato">
+                <img src="assets/images/retrato-min.webp" class="img-thumbnail mx-auto d-block" alt="retrato">
             </div>
         </div>
     </section>
@@ -51,6 +51,19 @@
             <!-- Fin de la línea de tiempo -->
 
         </div>
+    </section>
+
+    <hr>
+
+    <section class="custom-padding-top my-5" id="proyectos">
+        <div class="mx-3">
+            <h2 class="fw-bold mb-3">Proyectos</h2>
+            <p class="fs-5 my-0">Mis proyectos más emocionantes y creativos. Cada proyecto es el resultado de mi
+                dedicación y pasión por la programación, y estoy encantado de compartirlos contigo. Descubre cómo
+                transformo <span class="shiny-text">ideas en realidades digitales</span>. ¡Explora, inspira y crea con
+                mis proyectos de software!</p>
+        </div>
+        <app-projects></app-projects>
     </section>
 
     <hr>
