--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark transparent-background fixed-top py-2" aria-label="navbar">
     <div class="container">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" [routerLink]="['/']">
             <span class="fs-4 shiny-title brand-text">RICARDODEV</span>
         </a>
 
@@ -21,7 +21,7 @@
                     <a class="nav-link active" href="#experiencia">Experiencia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Proyectos</a>
+                    <a class="nav-link active" href="#proyectos">Proyectos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#contacto">Contacto</a>
