--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -68,7 +68,7 @@
 
     <hr>
 
-    <section class="custom-padding-top my-5" id="experiencia">
+    <section class="custom-padding-top my-5">
         <div class="mx-3">
             <h2 class="fw-bold mb-3">Idiomas</h2>
 
@@ -145,11 +145,6 @@
         </div>
     </section>
 
-    <footer class="my-5 pt-5 pb-4 text-center">
-        <p class="my-0 mb-5">
-            <small>©2024 Ricardo Huaripata. Todos los derechos reservados</small>
-        </p>
-        <hr>
-    </footer>
+    <app-footer></app-footer>
 
 </main>
