--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -87,21 +87,65 @@
     <hr>
 
     <section class="custom-padding-top mt-5" id="contacto">
-        <div class="mx-3">
+        <div class="mx-3 text-center">
 
-            <h2 class="fw-bold mb-3 text-center">Contacto</h2>
-            <p class="fs-5 my-0 text-center">Para cualquier oferta o consulta puedes ponerte en contacto conmigo através
-                de este formulario y me pondré en contacto contigo lo antes posible.</p>
+            <h2 class="fw-bold mb-3">Contacto</h2>
+            <p class="fs-5 my-0">Puedes comunicarte conmigo a través de este formulario o por algunas de mis redes
+                sociales.</p>
+                
+            <div class="mt-4 d-flex justify-content-center gap-3">
+                <a class="nav-link active" href="https://github.com/ricardohuaripata" target="_blank"
+                    title="GitHub - Visita mi perfil en GitHub">
+                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 496 512" height="1.5em"
+                        width="1.5em" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
+                        </path>
+                    </svg>
+                </a>
+
+                <a class="nav-link active" href="https://www.linkedin.com/in/ricardo-huaripata-bellido-1ab88a254/"
+                    target="_blank" title="LinkedIn - Conéctate conmigo en LinkedIn">
+                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1.5em"
+                        width="1.5em" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
+                        </path>
+                    </svg>
+                </a>
+
+                <a class="nav-link active" href="mailto:ricardohuaripatabellido@gmail.com" target="_blank"
+                    title="Enviar un correo electrónico al correo ricardohuaripatabellido@gmail.com"
+                    rel="noopener noreferrer">
+                    <svg viewBox="0 -2.5 20 20" height="1.5em" width="1.5em" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#ffffff">
+                        <g stroke-width="0"></g>
+                        <g stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g>
+                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <g id="Dribbble-Light-Preview" transform="translate(-300.000000, -922.000000)"
+                                    fill="#ffffff">
+                                    <g transform="translate(56.000000, 160.000000)">
+                                        <path
+                                            d="M262,764.291 L254,771.318 L246,764.281 L246,764 L262,764 L262,764.291 Z M246,775 L246,766.945 L254,773.98 L262,766.953 L262,775 L246,775 Z M244,777 L264,777 L264,762 L244,762 L244,777 Z">
+                                        </path>
+                                    </g>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                </a>
+
+            </div>
         </div>
 
-        <div class="container mt-5">
+        <div class="container mt-4">
             <div class="row justify-content-center">
                 <div class="col-md-6 border text-bg-light rounded">
                     <form [formGroup]="form" class="mx-3 my-4" (ngSubmit)="onSubmit()">
                         <div class="mb-3">
-                            <label for="name" class="form-label">Nombre</label>
                             <input type="text" class="form-control" id="name" placeholder="Nombre"
-                                formControlName="name" required autocomplete="name"
+                                formControlName="name" autocomplete="name"
                                 [ngClass]="{ 'is-invalid': form.get('name')!.invalid && this.submited }">
                             <div *ngIf="form.get('name')!.hasError('required')" class="invalid-feedback">
                                 Campo requerido
@@ -109,9 +153,8 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="email" class="form-label">Correo electrónico</label>
                             <input type="text" class="form-control" id="email" placeholder="Correo electrónico"
-                                formControlName="email" required autocomplete="email"
+                                formControlName="email" autocomplete="email"
                                 [ngClass]="{ 'is-invalid': form.get('email')!.invalid && this.submited }">
                             <div *ngIf="form.get('email')!.hasError('required')" class="invalid-feedback">
                                 Campo requerido
@@ -122,22 +165,30 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="message" class="form-label">Mensaje</label>
+                            <input type="text" class="form-control" id="subject" placeholder="Asunto"
+                                formControlName="subject"
+                                [ngClass]="{ 'is-invalid': form.get('subject')!.invalid && this.submited }">
+                            <div *ngIf="form.get('subject')!.hasError('required')" class="invalid-feedback">
+                                Campo requerido
+                            </div>
+                        </div>
+
+                        <div class="mb-3">
                             <textarea class="form-control" id="message" placeholder="Mensaje" rows="5"
-                                formControlName="message" required
+                                formControlName="message"
                                 [ngClass]="{ 'is-invalid': form.get('message')!.invalid && this.submited }"></textarea>
                             <div *ngIf="form.get('message')!.hasError('required')" class="invalid-feedback">
                                 Campo requerido
                             </div>
                         </div>
 
-                        <button class="btn btn-secondary btn-md fw-bold" type="submit" [disabled]="this.loading">
+                        <button class="btn btn-primary btn-md fw-bold w-100" type="submit" [disabled]="this.loading">
                             Enviar</button>
                     </form>
 
                     <div class="alert alert-success" role="alert" *ngIf="this.successSubmit">
-                        <h5 class="alert-heading">¡Enviado!</h5>
-                        <p class="my-0">Contactare contigo lo antes posible.</p>
+                        <h5 class="alert-heading">🎉¡Enviado!🎉</h5>
+                        <p class="my-0">Mensaje enviado. Gracias por tu interés, nos comunicaremos pronto.</p>
                     </div>
                 </div>
             </div>
