--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,3 +121,33 @@ a:hover {
 .clickable {
   cursor: pointer;
 }
+
+::view-transition-old(root) {
+  animation: exit 0.5s ease 0s 1 normal forwards;
+}
+
+::view-transition-new(root) {
+  animation: enter 1s ease 0s 1 normal forwards;
+}
+
+@keyframes enter {
+  from {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes exit {
+  from {
+    opacity: 1;
+    transform: scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: scale(0.6);
+  }
+}
