--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark transparent-background fixed-top py-2" aria-label="navbar">
     <div class="container">
-        <a class="navbar-brand" [routerLink]="['/']">
+        <a class="navbar-brand" href="/">
             <span class="fs-4 shiny-title brand-text">RICARDODEV</span>
         </a>
 
