--- a/src/app/pages/project-page/project-page.component.html
+++ b/src/app/pages/project-page/project-page.component.html
@@ -3,7 +3,7 @@
     <section class="mb-5">
         <div class="row">
             <div class="col-md-4 mb-4">
-                <img [src]="this.project.thumbnail" class="rounded" [alt]="this.project.title">
+                <img [src]="this.project.thumbnail" class="img-card-project rounded" [alt]="this.project.title">
 
             </div>
             <div class="col-md-8 mb-4">
