--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 :root {
   --brand-main: #3ec2ff;
-  --brand-secondary: #02061a;
+  --brand-secondary: #020413;
   --brand-tertiary: #8bf2ff;
 }
 
@@ -34,7 +34,7 @@ body {
 }
 
 .transparent-background {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 2, 34, 0.5);
   backdrop-filter: blur(10px);
 }
 
