update background color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 :root {
   --brand-main: #3ec2ff;
-  --brand-secondary: #020413;
+  --brand-secondary: #030b1a;
   --brand-tertiary: #8bf2ff;
 }
 
@@ -34,8 +34,8 @@ body {
 }
 
 .transparent-background {
-  background-color: rgba(0, 2, 34, 0.5);
-  backdrop-filter: blur(10px);
+  background-color: rgba(0, 14, 39, 0.397);
+  backdrop-filter: blur(15px);
 }
 
 .brand-text {
