--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -6,7 +6,7 @@
 
                 <div class="mx-3 my-4">
                     <div class="d-flex justify-content-between">
-                        <p class="fs-5 fw-bold"><a [href]="'projects/' + project.id">{{project.title}}</a></p>
+                        <p class="fs-5 fw-bold"><a [href]="project.link" target="_blank">{{project.title}}</a></p>
 
                         <a class="nav-link" [href]="project.githubRepoUrl" target="_blank"
                             title="Visitar repositorio en GitHub">
@@ -27,6 +27,7 @@
 
             </div>
         </div>
+        <div class="col-md-5 mx-auto"></div>
     </div>
 
 </div>
