--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -2,8 +2,9 @@
     <div class="row justify-content-center">
         <div *ngFor="let project of projects" class="col-md-5 rounded mx-auto mt-4 box-background px-0">
             <div>
-                <img [src]="project.thumbnail" class="img-card-project rounded" [alt]="project.title">
-
+                <div class="img-card-project-container rounded">
+                    <img [src]="project.thumbnail" class="img-card-project" [alt]="project.title">
+                </div>
                 <div class="mx-3 my-4">
                     <div class="d-flex justify-content-between">
                         <p class="fs-5 fw-bold"><a [href]="project.link" target="_blank">{{project.title}}</a></p>
