--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ $secondary: #02061a;
 $success: #14a800;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap');
 
 ::selection {
   background-color: var(--brand-main);
@@ -22,7 +23,9 @@ $success: #14a800;
 body {
   padding-top: 65px;
   background: var(--brand-secondary);
-  color: #ffffff;
+  color: #e2e8f0;
+  font-family: "Onest", sans-serif;
+
 }
 
 .shiny-title {
