--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse justify-content-md-center text-center" id="navbarsExample10">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#sobre-mi">Sobre mi</a>
+                    <a class="nav-link active" href="#sobre-mi">Sobre mí</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#tecnologias">Tecnologías</a>
