--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,7 +87,8 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(var(--brand-main), var(--brand-secondary));
+  background: var(--brand-main);
+  border-radius: 5px;
 }
 
 @media (max-width: 470px) {
