--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark transparent-background fixed-top py-2" aria-label="navbar">
     <div class="container">
-        <a class="navbar-brand" href="/">
-            <span class="fs-4 shiny-title brand-text">RICARDO DEV</span>
+        <a class="navbar-brand p-0" href="/">
+            <img src="favicon.ico" alt="ricardohuaripata.com" width="48px">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10"
