--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="my-5 pt-5 pb-4 text-center">
     <p class="my-0 mb-5">
-        <small>Copyright ©2024 Ricardo Huaripata Bellido</small>
+        <small>© 2024 Ricardo Huaripata Bellido</small>
     </p>
     <hr>
 </footer>
