--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="my-5 pt-5 pb-4 text-center">
+<footer class="my-5 py-4 text-center">
     <p class="my-0 mb-5">
         <small>© 2024 Ricardo Huaripata Bellido</small>
     </p>
