--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,38 +1,37 @@
-<nav class="navbar navbar-expand-md navbar-dark transparent-background fixed-top py-2" aria-label="navbar">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top py-2" aria-label="navbar">
     <div class="container">
         <a class="navbar-brand p-0" href="/">
             <img src="favicon.ico" alt="ricardohuaripata.com" width="48px">
         </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10"
-            aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar10"
+            aria-controls="navbar10" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse justify-content-md-center text-center" id="navbarsExample10">
+        <div class="collapse navbar-collapse justify-content-around text-center" id="navbar10">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#sobre-mi">Sobre mí</a>
+                <li class="nav-item py-2 mx-3">
+                    <a href="#sobre-mi">Sobre mí</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#tecnologias">Tecnologías</a>
+                <li class="nav-item py-2 mx-3">
+                    <a href="#tecnologias">Tecnologías</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#proyectos">Proyectos</a>
+                <li class="nav-item py-2 mx-3">
+                    <a href="#proyectos">Proyectos</a>
                 </li>
+                <!--
                 <li class="nav-item">
-                    <a class="nav-link active" href="#experiencia">Experiencia</a>
+                    <a href="#experiencia" class="fw-bold">Experiencia</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#contacto">Contacto</a>
+                -->
+                <li class="nav-item py-2 mx-3">
+                    <a href="#contacto">Contacto</a>
                 </li>
             </ul>
-        </div>
-
-        <div class="collapse navbar-collapse justify-content-md-center text-center" id="navbarsExample10">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="https://github.com/ricardohuaripata" target="_blank"
+                <li class="nav-item py-2 mx-2">
+                    <a href="https://github.com/ricardohuaripata" target="_blank"
                         title="GitHub - Visita mi perfil en GitHub"><svg stroke="currentColor" fill="currentColor"
                             stroke-width="0" viewBox="0 0 496 512" height="1em" width="1em"
                             xmlns="http://www.w3.org/2000/svg">
@@ -41,8 +40,8 @@
                             </path>
                         </svg></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="https://www.linkedin.com/in/ricardo-huaripata-bellido-1ab88a254/"
+                <li class="nav-item py-2 mx-2">
+                    <a href="https://www.linkedin.com/in/ricardo-huaripata-bellido-1ab88a254/"
                         target="_blank" title="LinkedIn - Conéctate conmigo en LinkedIn"><svg stroke="currentColor"
                             fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1em" width="1em"
                             xmlns="http://www.w3.org/2000/svg">
@@ -53,5 +52,6 @@
                 </li>
             </ul>
         </div>
+
     </div>
 </nav>
