--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <main class="container my-5">
 
-    <section class="custom-padding-top mb-5 mx-3" id="sobre-mi">
+    <section class="pt-5 mx-3" id="sobre-mi">
         <div class="row">
             <div class="col-md-8">
                 <h1 class="fw-bold">Hola, <span class="shiny-title">soy Ricardo</span>
@@ -13,7 +13,8 @@
                     Con una formación en <span class="shiny-text">desarrollo de aplicaciones web</span>, actualmente me
                     encuentro en un emocionante
                     viaje de
-                    aprendizaje para especializarme como Desarrollador Backend Java y explorar nuevas oportunidades en la
+                    aprendizaje para especializarme como Desarrollador Backend Java y explorar nuevas oportunidades en
+                    la
                     industria tecnológica.</p>
             </div>
             <div class="col-md-4">
@@ -23,10 +24,10 @@
         <div class="d-flex justify-content-between align-items-center mt-4">
             <a href="assets/CV_RICARDO_HUARIPATA.pdf" download="CV_RICARDO_HUARIPATA.pdf">
                 <button class="btn btn-outline-primary">Descargar CV</button>
-              </a>
+            </a>
 
-              <div class="d-flex justify-content-center gap-3">
-                <a class="nav-link active" href="https://github.com/ricardohuaripata" target="_blank"
+            <div class="d-flex justify-content-center gap-3">
+                <a href="https://github.com/ricardohuaripata" target="_blank"
                     title="GitHub - Visita mi perfil en GitHub">
                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 496 512" height="1.5em"
                         width="1.5em" xmlns="http://www.w3.org/2000/svg">
@@ -36,8 +37,8 @@
                     </svg>
                 </a>
 
-                <a class="nav-link active" href="https://www.linkedin.com/in/ricardo-huaripata-bellido-1ab88a254/"
-                    target="_blank" title="LinkedIn - Conéctate conmigo en LinkedIn">
+                <a href="https://www.linkedin.com/in/ricardo-huaripata-bellido-1ab88a254/" target="_blank"
+                    title="LinkedIn - Conéctate conmigo en LinkedIn">
                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1.5em"
                         width="1.5em" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -46,7 +47,7 @@
                     </svg>
                 </a>
 
-                <a class="nav-link active" href="mailto:ricardohuaripatabellido@gmail.com" target="_blank"
+                <a href="mailto:ricardohuaripatabellido@gmail.com" target="_blank"
                     title="Enviar un correo electrónico al correo ricardohuaripatabellido@gmail.com"
                     rel="noopener noreferrer">
                     <svg viewBox="0 -2.5 20 20" height="1.5em" width="1.5em" version="1.1"
@@ -71,12 +72,10 @@
             </div>
 
         </div>
-      
+
     </section>
 
-    <hr>
-
-    <section class="custom-padding-top my-5" id="tecnologias">
+    <section class="mt-5 py-4" id="tecnologias">
         <div class="mx-3">
             <h2 class="fw-bold mb-3">Tecnologías</h2>
             <p class="fs-5 my-0">En mi viaje por el <span class="shiny-text">mundo del desarrollo web</span>, he
@@ -86,9 +85,7 @@
         <app-technologies></app-technologies>
     </section>
 
-    <hr>
-
-    <section class="custom-padding-top my-5" id="proyectos">
+    <section class="mt-5 py-4" id="proyectos">
         <div class="mx-3">
             <h2 class="fw-bold mb-3">Proyectos</h2>
             <p class="fs-5 my-0">Mis proyectos más emocionantes y creativos. Cada proyecto es el resultado de mi
@@ -99,12 +96,10 @@
         <app-projects></app-projects>
     </section>
 
-    <hr>
-
-    <section class="custom-padding-top my-5" id="experiencia">
+    <!--
+    <section class="mt-5 py-4" id="experiencia">
         <div class="mx-3">
             <h2 class="fw-bold mb-3">Experiencia</h2>
-            <!-- Línea de tiempo -->
             <div class="timeline">
                 <div *ngFor="let experience of experiences" class="timeline-item mb-4">
                     <p class="fs-5 my-0"><span class="shiny-text">{{ experience.job }}</span> - <a
@@ -114,14 +109,12 @@
                     
                 </div>
             </div>
-            <!-- Fin de la línea de tiempo -->
-
         </div>
     </section>
+    -->
 
-    <hr>
-
-    <section class="custom-padding-top my-5">
+    <!--
+    <section class="mt-5 py-4">
         <div class="mx-3">
             <h2 class="fw-bold mb-3">Idiomas</h2>
 
@@ -132,21 +125,21 @@
             <div class="mb-4">
                 <p class="fs-5 my-0"><span class="shiny-text">Inglés</span></p>
                 <p class="mt-2">Intermedio-alto</p>
-                <p><a href="https://cert.efset.org/iDSeVS" target="_blank" title="Mostrar certificado">EF SET English Certificate 57/100 (B2 Upper Intermediate)</a></p>
+                <p><a href="https://cert.efset.org/iDSeVS" target="_blank" title="Mostrar certificado">EF SET English
+                        Certificate 57/100 (B2 Upper Intermediate)</a></p>
             </div>
 
         </div>
     </section>
+    -->
 
-    <hr>
-
-    <section class="custom-padding-top mt-5" id="contacto">
+    <section class="mt-5 py-4" id="contacto">
         <div class="mx-3 text-center">
 
             <h2 class="fw-bold mb-3">Contacto</h2>
             <p class="fs-5 my-0">Puedes comunicarte conmigo a través de este formulario o por algunas de mis redes
                 sociales.</p>
-                
+
             <div class="mt-4 d-flex justify-content-center gap-3">
                 <a class="nav-link active" href="https://github.com/ricardohuaripata" target="_blank"
                     title="GitHub - Visita mi perfil en GitHub">
