--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="mx-3 my-4">
                     <div class="d-flex justify-content-between">
-                        <p class="fs-5 fw-bold"><a [href]="project.link" class="shiny-title">{{project.title}}</a></p>
+                        <p class="fs-5 fw-bold"><a [href]="project.link">{{project.title}}</a></p>
 
                         <a class="nav-link" [href]="project.githubRepoUrl" target="_blank"
                             title="Visitar repositorio en GitHub">
