--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -5,17 +5,12 @@
             <div class="col-md-8">
                 <h1 class="fw-bold">Hola, <span class="shiny-title">soy Ricardo</span>
                 </h1>
-                <h5 class="shiny-text shine-effect">Desarrollador Web Full Stack</h5>
+                <h5 class="shiny-text shine-effect">Desarrollador Web</h5>
 
-                <p class="fs-5 mt-5 mb-4">¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la tecnología, los deportes y
-                    los
-                    desafíos.
-                    Con una formación en <span class="shiny-text">desarrollo de aplicaciones web</span>, actualmente me
-                    encuentro en un emocionante
-                    viaje de
-                    aprendizaje para especializarme como Desarrollador Backend Java y explorar nuevas oportunidades en
-                    la
-                    industria tecnológica.</p>
+                <p class="fs-5 mt-5 mb-4">¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la programación y de la tecnología.
+                    Con una formación en <span class="shiny-text">desarrollo de aplicaciones web</span>, actualmente me encuentro en un emocionante
+                    viaje de aprendizaje para especializarme como <span class="shiny-text">desarrollador backend</span> y para explorar nuevas oportunidades en la
+                    industria del desarrollo de software.</p>
             </div>
             <div class="col-md-4">
                 <img src="assets/images/retrato-min.webp" class="img-thumbnail mx-auto d-block" alt="retrato">
