--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -13,11 +13,11 @@
                     industria del desarrollo de software.</p>
             </div>
             <div class="col-md-4">
-                <img src="assets/images/retrato-min.webp" class="img-thumbnail mx-auto d-block" alt="retrato">
+                <img src="/assets/images/retrato-min.webp" class="img-thumbnail mx-auto d-block" alt="retrato" width="100%" height="100%">
             </div>
         </div>
         <div class="d-flex justify-content-between align-items-center mt-4">
-            <a href="assets/CV_RICARDO_HUARIPATA.pdf">
+            <a href="/assets/CV_RICARDO_HUARIPATA.pdf">
                 <button class="btn btn-outline-primary">Curriculum vitae</button>
             </a>
 
