--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top py-2" aria-label="navbar">
     <div class="container">
         <a class="navbar-brand p-0" href="/">
-            <img src="favicon.ico" alt="ricardohuaripata.com" width="48px">
+            <img src="/assets/images/logo.png" alt="ricardohuaripata.com" width="48px" height="48px">
         </a>
 
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar10"
