--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -3,9 +3,9 @@
     <section class="pt-5 mx-3" id="sobre-mi">
         <div class="row">
             <div class="col-md-8">
-                <h1 class="fw-bold">Hola, <span class="shiny-title">soy Ricardo</span>
+                <h1 class="fw-bold mb-0">Hola, <span class="shiny-title">soy Ricardo</span>
                 </h1>
-                <h5 class="shiny-text shine-effect">Desarrollador Web</h5>
+                <p class="fs-5 mb-0 shiny-text shine-effect">Desarrollador Web</p>
 
                 <p class="fs-5 mt-5 mb-4">¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la programación y de la tecnología.
                     Con una formación en <span class="shiny-text">desarrollo de aplicaciones web</span>, actualmente me encuentro en un emocionante
@@ -13,7 +13,7 @@
                     industria del desarrollo de software.</p>
             </div>
             <div class="col-md-4">
-                <img src="/assets/images/retrato-min.webp" class="img-thumbnail mx-auto d-block" alt="retrato" width="100%" height="100%">
+                <img src="/assets/images/retrato-min.webp" class="img-thumbnail mx-auto d-block" alt="retrato-min.webp" width="300px" height="300px">
             </div>
         </div>
         <div class="d-flex justify-content-between align-items-center mt-4">
@@ -69,7 +69,7 @@
     <section class="mt-5 py-4" id="tecnologias">
         <div class="mx-3">
             <h2 class="fw-bold mb-3">Tecnologías</h2>
-            <p class="fs-5 my-0">En mi viaje por el <span class="shiny-text">mundo del desarrollo web</span>, he
+            <p class="fs-5 mb-0">En mi viaje por el <span class="shiny-text">mundo del desarrollo web</span>, he
                 cultivado experiencia y habilidades en una variedad de tecnologías. <span class="shiny-text">Mi
                     stack tecnológico incluye:</span></p>
         </div>
@@ -79,7 +79,7 @@
     <section class="mt-5 py-4" id="proyectos">
         <div class="mx-3">
             <h2 class="fw-bold mb-3">Proyectos</h2>
-            <p class="fs-5 my-0">Mis proyectos más emocionantes y creativos. Cada proyecto es el resultado de mi
+            <p class="fs-5 mb-0">Mis proyectos más emocionantes y creativos. Cada proyecto es el resultado de mi
                 dedicación y pasión por la programación, y estoy encantado de compartirlos contigo. Descubre cómo
                 transformo <span class="shiny-text">ideas en realidades digitales</span>. ¡Explora, inspira y crea con
                 mis proyectos de software!</p>
@@ -128,7 +128,7 @@
         <div class="mx-3 text-center">
 
             <h2 class="fw-bold mb-3">Contacto</h2>
-            <p class="fs-5 my-0">Puedes comunicarte conmigo a través de este formulario o por algunas de mis redes
+            <p class="fs-5 mb-0">Puedes comunicarte conmigo a través de este formulario o por algunas de mis redes
                 sociales.</p>
 
             <div class="mt-4 d-flex justify-content-center gap-3">
