--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,8 @@
-<footer class="my-5 py-4 text-center">
-    <p class="my-0 mb-5">
-        <small>© 2024 Ricardo Huaripata Bellido</small>
-    </p>
-    <hr>
-</footer>
+<div class="container">
+    <footer class="my-5 py-4 text-center">
+        <p class="my-0 mb-5">
+            <small>© 2024 Ricardo Huaripata Bellido</small>
+        </p>
+        <hr>
+    </footer>
+</div>
